test/tests/ChoiceConstruct.frost
choice Fail {
    FAIL
}

method main() {
    def f := Fail()
}
